--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Webapp</title>
+    <link rel="stylesheet" href="">
+
+    <script src=" //code.jquery.com/jquery-2.1.1.min.js"></script>
+
+  </head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
